RESOLVED FIXED225777
Misc GCC warning cleanup
https://bugs.webkit.org/show_bug.cgi?id=225777
Summary Misc GCC warning cleanup
Michael Catanzaro
Reported 2021-05-13 13:19:15 PDT
Regular boring compiler warning cleanup: [909/5319] Building CXX object Source/WebDriver/CMakeFiles/WebDriver.dir/glib/WebDriverServiceGLib.cpp.o ../../Source/WebDriver/glib/WebDriverServiceGLib.cpp: In function ‘bool WebDriver::parseVersion(const WTF::String&, uint64_t&, uint64_t&, uint64_t&)’: ../../Source/WebDriver/glib/WebDriverServiceGLib.cpp:38:10: warning: unused variable ‘ok’ [-Wunused-variable] 38 | bool ok; | ^~ Can be removed. [2471/5319] Building CXX object Source/WebCore/CMakeFiles...vedSources/unified-sources/UnifiedSource-68aea4ac-2.cpp.o In file included from WebCore/DerivedSources/unified-sources/UnifiedSource-68aea4ac-2.cpp:7: ../../Source/WebCore/bindings/js/JSAudioNodeCustom.cpp: In function ‘JSC::JSValue WebCore::toJSNewlyCreated(JSC::JSGlobalObject*, WebCore::JSDOMGlobalObject*, WTF::Ref<WebCore::AudioNode>&&)’: ../../Source/WebCore/bindings/js/JSAudioNodeCustom.cpp:134:1: warning: control reaches end of non-void function [-Wreturn-type] 134 | } | ^ Trivial, just needs RELEASE_ASSERT_NOT_REACHED(). [2791/5319] Building CXX object Source/WebCore/CMakeFiles...edSources/unified-sources/UnifiedSource-8feba646-15.cpp.o In file included from WebCore/DerivedSources/unified-sources/UnifiedSource-8feba646-15.cpp:5: ../../Source/WebCore/svg/SVGToOTFFontConversion.cpp: In constructor ‘WebCore::SVGToOTFFontConverter::SVGToOTFFontConverter(const WebCore::SVGFontElement&)’: ../../Source/WebCore/svg/SVGToOTFFontConversion.cpp:1454:99: warning: comparison is always true due to limited range of data type [-Wtype-limits] 1454 | if (auto value = parseIntegerAllowingTrailingJunk<uint16_t>(segment); value && *value >= 0 && *value < 1000) { | ~~~~~~~^~~~ This last warning comes from r277245 which changed an int to unsigned int. I squinted at it for a bit and think that looks probably fine.
Attachments
Patch (3.52 KB, patch)
2021-05-13 13:21 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2021-05-13 13:21:37 PDT
EWS
Comment 2 2021-05-13 22:53:19 PDT
Committed r277483 (237718@main): <https://commits.webkit.org/237718@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 428555 [details].
Radar WebKit Bug Importer
Comment 3 2021-05-13 22:54:15 PDT
Philippe Normand
Comment 4 2021-05-20 12:46:41 PDT
*** Bug 225694 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.