Misc GCC warning cleanup https://bugs.webkit.org/show_bug.cgi?id=225777

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-05-13
Reviewed by Carlos Garcia Campos.

Source/WebCore:

* bindings/js/JSAudioNodeCustom.cpp:
(WebCore::toJSNewlyCreated): Add missing RELEASE_ASSERT_NOT_REACHED().
* svg/SVGToOTFFontConversion.cpp:
(WebCore::SVGToOTFFontConverter::SVGToOTFFontConverter): Remove redundant condition.

Source/WebDriver:

Remove unused variable.

* glib/WebDriverServiceGLib.cpp:
(WebDriver::parseVersion):

Canonical link: https://commits.webkit.org/237718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277483 268f45cc-cd09-0410-ab3c-d52691b4dbfc